--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
   <body>
     <div id="header">
       <h1>DJ 183</h1>
-      Welcome to DJ-183 Final Project. This is your starter code, we recommend you change this!
+      <p> Welcome to DJ-183 Final Project. <p>
+      <p> This is your starter code, we recommend you change this! <p> 
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
     
