cleaning up the starter code

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     {% block head %}
-    <title>DJ 183 Demo</title>
+    <title>Your Page Title</title>
     {% endblock %}
   </head>
   <body>
     <div id="header">
-      <h1>DJ 183</h1>
-      <p> Welcome to DJ-183 Final Project. <p>
-      <p> This is your starter code, we recommend you change this! <p> 
+      <h1>Welcome to your starter code!</h1>
+      <p>Thank you for choosing DJ 183. Play around with this code to learn more about HTML!<p>
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
-    
+
   </body>
 </html>
