--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div id="header">
-      <h1>Welcome to your starter code!</h1>
-      <p>Thank you for choosing DJ 183. Play around with this code to learn more about HTML!<p>
+      <h1>DJ 183</h1>
+      <p>Choose a genre and try to guess the correct song!<p>
     </div>
-    <div id="content">{% block content %}{% endblock %}</div>
 
+    <div id="content">{% block content %}{% endblock %}</div>
+    <p>Current Score: </p>
+    <button id="clearScore">Clear Score</button>
   </body>
 </html>
