--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-    <h3>Here is a list of currently imported genres:</h2>
-    <ul>
-    {% for genre in genres %}
-    	<li>{{ genre }}</li>
-    {% endfor %}
-    </ul>
-    <p>You will need to add (at least) two more genres to this list. Check out helpers.py and get started!</p>
-
+    <h2>Choose a genre:</h2>
+    <form>
+        <select name="genres">
+            {% for genre in genres %}
+                <option>{{genre}}</option>
+            {% endfor %}
+        </select>
+        <input type="submit">
+    </form>
+      
 {% endblock %}
