--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     </div>
 
     <div id="content">{% block content %}{% endblock %}</div>
-    <p>Current Score: </p>
+    <p>Current Score: {{score}}</p>
     <button id="clearScore">Clear Score</button>
   </body>
 </html>
