--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
                 <option>{{genre}}</option>
             {% endfor %}
         </select>
-        <input type="submit">
     </form>
-      
-{% endblock %}
+
+   <a href="question.html"><button>Submit</button></a>
+
+{% endblock %} 
