--- a/templates/answercorrect.html
+++ b/templates/answercorrect.html
@@ -5,9 +5,11 @@
     <h2> <b> Correct! </b> </h2>
     <br>
 
-    <p> The answer is </p> 
+    <p> The answer is </p>
+    <!-- write the answer -->
 
     <a href="question.html"> Try again? </a>
+    <br>
     <a href="index.html"> Change genre </a>
 
 {% endblock %}
