--- a/templates/clear.html
+++ b/templates/clear.html
@@ -4,8 +4,8 @@
 <h2>Would you like to clear your score?</h2>
 <form action="">
     <div>
-    <input type="radio" name="choice" value="Yes" id="button1"> Male<br>
-    <input type="radio" name="choice" value="No" id = "button2"> Female<br>
+    <input type="radio" name="choice" value="Yes" id="button1"> Yes<br>
+    <input type="radio" name="choice" value="No" id = "button2"> No<br>
     <script>
     var button1 = document.getElementById("button1");
     var button2 = document.getElementById("button2");
