--- a/templates/question.html
+++ b/templates/question.html
@@ -2,6 +2,23 @@
 
 {% block content %}
 
-    <h2>Question Page</h2>
+    <!DOCTYPE html>
+    <html>
+        <body>
+            <h1>Question Page</h1>
+            <h2>Which song is playing?</h2>
+            <form action="/answer" method = "POST">
+                <audio controls>
+                    <source src = '{{ preview }}'>
+                </audio>
+                {% for question in questions %}
+                <input type="radio" name="choice" value = '{{question}}'>
+                <br>
+                {% endfor %}
+                <input type="hidden" id = song_choice name = "song_choice">
+                <input type="submit" value="Submit">
+            </form>
+        </body>
+    </html>
 
 {% endblock %}
