--- a/templates/answercorrect.html
+++ b/templates/answercorrect.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h2> <b> Correct! </b> </h2>
+   <h2> <b> Correct! </b> </h2>
     <br>
 
     <p> The answer is </p>
@@ -11,5 +11,9 @@
     <a href="question.html"> Try again? </a>
     <br>
     <a href="index.html"> Change genre </a>
+
+    <form action="/clear" method="GET">
+        <input type="submit" value = "Clear Score" name="Clear Score">
+    </form>
 
 {% endblock %}
