--- a/templates/answerincorrect.html
+++ b/templates/answerincorrect.html
@@ -10,4 +10,8 @@
 <br>
 <a href = "index.html"> Change genre </a>
 
+<form action="/clear" method="GET">
+    <input type="submit" value = "Clear Score" name="Clear Score">
+</form>
+
 {% endblock %}
