--- a/templates/clear.html
+++ b/templates/clear.html
@@ -13,9 +13,12 @@
     if (button1.checked){
         clear_score();
     }
-</script>
-</div>
-  </form>
+    </script>
+    </div>
+</form>
 
-   <a href="index.html"><button>Submit</button></a>
+<form action="/index" method="GET">
+    <input type="submit" value = "Submit" name="Submit">
+</form>
+
 {% endblock %}
