--- a/templates/clear.html
+++ b/templates/clear.html
@@ -17,7 +17,7 @@
     </div>
 </form>
 
-<form action="/index" method="GET">
+<form action="/" method="GET">
     <input type="submit" value = "Submit" name="Submit">
 </form>
 
