--- a/templates/answer.html
+++ b/templates/answer.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
-        
+    <h2> <b> ##Boolean Check for C/I </b> </h2>
+    <br>
+
+    <p> The answer is <b> {{correct_song}} </b> </p>
+
+    <a href="question.html"> Try again? </a>
+    <br>
+    <br>
+    <a href="index.html"> Change genre </a>
+    <br>
+    <br>
+
+    <form action="/clear" method="GET">
+        <input type="submit" value = "Clear Score" name="Clear Score">
+    </form>
 
 {% endblock %} 
