--- a/templates/answer.html
+++ b/templates/answer.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h2> <b> ##Boolean Check for C/I </b> </h2>
+    <h2> <b> {{correct}} </b> </h2>
     <br>
 
     <p> The answer is <b> {{correct_song}} </b> </p>
