--- a/templates/question.html
+++ b/templates/question.html
@@ -7,7 +7,7 @@
         <body>
             <h1>Question Page</h1>
             <h2>Which song is playing?</h2>
-            <form action="/answer" method = "POST">
+            <form action="/answer" method = "POST" name = "questions">
                 <audio controls>
                     <source src = '{{ preview }}'>
                 </audio>
