--- a/templates/answer.html
+++ b/templates/answer.html
@@ -5,12 +5,12 @@
     <h2> <b> {{correct}} </b> </h2>
     <br>
 
-    <p> The answer is <b> {{correct_song}} </b> </p>
+    <p> The answer is <b> {{'correct_song'}} </b> </p>
 
-    <a href="question.html"> Try again? </a>
+    <a href="/question"> Try again? </a>
     <br>
     <br>
-    <a href="index.html"> Change genre </a>
+    <a href="/index"> Change genre </a>
     <br>
     <br>
 
