--- a/templates/answer.html
+++ b/templates/answer.html
@@ -10,7 +10,7 @@
     <a href="/question"> Try again? </a>
     <br>
     <br>
-    <a href="/index"> Change genre </a>
+    <a href="/"> Change genre </a>
     <br>
     <br>
 
