--- a/templates/question.html
+++ b/templates/question.html
@@ -9,14 +9,14 @@
             <h2>Which song is playing?</h2>
             <form action="/answer" method = "GET">
                 <audio controls>
-                    <source src = '{{ preview }}'>
+                    <source src ="{{ preview }}">
                 </audio>
                 <br>
                 {% for question in questions %}
-                <input type="radio" name="choice" value = '{{question}}'>{{question}}
+                <input type="radio" name="choice" value ="{{question}}">{{question}}
                 <br>
                 {% endfor %}
-                <input type="hidden" value = "correct_song" name = "correct_song">
+                <input type="hidden"  name = "correct_song" value = "{{correct_song}}">
                 <input type="submit" value="Submit">
             </form>
         </body>
