--- a/templates/answer.html
+++ b/templates/answer.html
@@ -5,7 +5,7 @@
     <h2> <b> {{correct}} </b> </h2>
     <br>
 
-    <p> The answer is <b> {{'correct_song'}} </b> </p>
+    <p> The answer is <b> {{correct_song}} </b> </p>
 
     <a href="/question"> Try again? </a>
     <br>
