--- a/templates/question.html
+++ b/templates/question.html
@@ -17,6 +17,7 @@
                 <br>
                 {% endfor %}
                 <input type="hidden" name = "correct_song" value = "{{correct_song}}">
+                <input type="hidden" name = "correct_genre" value = "{{correct_genre}}">
                 <input type="submit" value="Submit">
             </form>
         </body>
