--- a/templates/clear.html
+++ b/templates/clear.html
@@ -10,7 +10,7 @@
     var button1 = document.getElementById("button1");
     var button2 = document.getElementById("button2");
     if (button1.checked){
-        clear_score();
+            score = clear_score();
     }
     </script>
     </div>
