--- a/templates/clear.html
+++ b/templates/clear.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h2>Would you like to clear your score?</h2>
-<form action="/" method="GET">
+<form action="/intermediate" method="GET">
     <div>
     <input type="radio" name="choice" value="Yes" id="button1"> Yes<br>
     <input type="radio" name="choice" value="No" id = "button2"> No<br>
