--- a/templates/intermediate.html
+++ b/templates/intermediate.html
@@ -1,3 +1,3 @@
 <script language="javascript" type="text/javascript">
-    window.setTimeout('window.open("/","newsite")',100);
+    window.setTimeout('window.location.replace("/","newsite")',100);
 </script>
