--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,14 @@
     {% endblock %}
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <div id="header">
       <h1>DJ 183</h1>
       <p>Choose a genre and try to guess the correct song!<p>
@@ -13,5 +21,7 @@
 
     <div id="content">{% block content %}{% endblock %}</div>
     <p>Current Score: {{score}}</p>
+
+    <div class="fb-share-button" data-href="http://gritty-beats.herokuapp.com/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgritty-beats.herokuapp.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
   </body>
 </html>
