--- a/templates/answer.html
+++ b/templates/answer.html
@@ -19,5 +19,9 @@
     <form action="/clear" method="GET">
         <input type="submit" value = "Clear Score" name="Clear Score">
     </form>
+    <br>
+    <form action="/askname" method="GET">
+        <input type="submit" value="End Game" name="End Game">
+    </form>
 
 {% endblock %} 
