--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     {% block head %}
-    <title>Your Page Title</title>
+    <title>Gritty Beats</title>
     {% endblock %}
   </head>
   <body>
     <div id="header">
-      <h1>DJ 183</h1>
+      <h1>Gritty Beats</h1>
       <p>Choose a genre and try to guess the correct song!<p>
     </div>
 
