--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,13 @@
     }(document, "script", "twitter-wjs"));</script>
 
     <!--Pinterest Saving API-->
-    <!--
+
     <script
     type="text/javascript"
     async defer
     src="//assets.pinterest.com/js/pinit.js"
     ></script>
-  -->
+
 
     <div id="header">
       <h1>Gritty Beats</h1>
@@ -66,8 +66,8 @@
     <br> <br>
 
     <!--Pinterest Saving Button-->
-    <!--<a href="https://www.pinterest.com/pin/create/button/?url=http://gritty-beats.herokuapp.com/" data-pin-do="buttonBookmark" data-pin-tall="True"></a>
-    -->
+    <a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a>
+
 
     <!--Tumblr Sharing API + Button -->
     <!--
