--- a/templates/answer.html
+++ b/templates/answer.html
@@ -24,4 +24,76 @@
         <input type="submit" value="End Game" name="End Game">
     </form>
 
+    <head>
+        <style>
+            input[type=submit]{
+            -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+            -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+            box-shadow:inset 0px 1px 0px 0px #ffffff;
+            background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6b606b), color-stop(1, #e9e9e9));
+            background:-moz-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-webkit-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-o-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-ms-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:linear-gradient(to bottom, #6b606b 5%, #e9e9e9 100%);
+            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b606b', endColorstr='#e9e9e9',GradientType=0);
+            background-color:#6b606b;
+            -moz-border-radius:6px;
+            -webkit-border-radius:6px;
+            border-radius:6px;
+            border:1px solid #dcdcdc;
+            display:inline-block;
+            cursor:pointer;
+            color:#666666;
+            font-family:Arial;
+            font-size:15px;
+            font-weight:bold;
+            padding:6px 24px;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #ffffff;
+        }
+        input[type=submit]:hover {
+            background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #6b606b));
+            background:-moz-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-webkit-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-o-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-ms-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:linear-gradient(to bottom, #e9e9e9 5%, #6b606b 100%);
+            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#6b606b',GradientType=0);
+            background-color:#e9e9e9;
+        }
+        input[type=submit]:active {
+            position:relative;
+            top:1px;
+        }
+        body{ 
+            height: 100%;
+            background: linear-gradient(to bottom right, white, black, red);
+            background-attachment: fixed;
+            background-color: #ffffdd;                  
+            background-position: center center;
+        }
+        h1{
+          color:#cc0000;
+          font-family: Trattatello, fantasy;
+          font-size: 80px;
+        }
+        h2 {
+            font-family: Chalkduster, fantasy;
+            font-size: 30px;
+        }
+
+        h3 {
+            font-family: Luminari, fantasy;
+            color: #003366;
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 25px;
+            font-family: Snell Roundhand, cursive;
+            color: white;
+        }
+            </style>
+    </head>
 {% endblock %} 
