--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,23 @@
 <!doctype html>
 <html>
+    <head>
+        <style>
+        .button {
+          {background-color: #555555;} /* Black */
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
+        
+       
+        </style>
+        </head>
   <head>
     {% block head %}
     <title>Gritty Beats</title>
@@ -45,7 +63,7 @@
 
     <div id="header">
       <h1>Gritty Beats</h1>
-      <p>Choose a genre and try to guess the correct song!<p>
+      <p>Choose a genre, and try to guess the correct song!<p>
     </div>
 
     <div id="content">{% block content %}{% endblock %}</div>
@@ -69,4 +87,77 @@
     <a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a>
 
   </body>
+
+  <head>
+    <style>
+      input[type=submit]{
+            -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+            -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+            box-shadow:inset 0px 1px 0px 0px #ffffff;
+            background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6b606b), color-stop(1, #e9e9e9));
+            background:-moz-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-webkit-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-o-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:-ms-linear-gradient(top, #6b606b 5%, #e9e9e9 100%);
+            background:linear-gradient(to bottom, #6b606b 5%, #e9e9e9 100%);
+            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b606b', endColorstr='#e9e9e9',GradientType=0);
+            background-color:#6b606b;
+            -moz-border-radius:6px;
+            -webkit-border-radius:6px;
+            border-radius:6px;
+            border:1px solid #dcdcdc;
+            display:inline-block;
+            cursor:pointer;
+            color:#666666;
+            font-family:Arial;
+            font-size:15px;
+            font-weight:bold;
+            padding:6px 24px;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #ffffff;
+        }
+        input[type=submit]:hover {
+            background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #6b606b));
+            background:-moz-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-webkit-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-o-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:-ms-linear-gradient(top, #e9e9e9 5%, #6b606b 100%);
+            background:linear-gradient(to bottom, #e9e9e9 5%, #6b606b 100%);
+            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#6b606b',GradientType=0);
+            background-color:#e9e9e9;
+        }
+        input[type=submit]:active {
+            position:relative;
+            top:1px;
+        }
+        body{ 
+            height: 100%;
+            background: linear-gradient(to bottom right, white, black, red);
+            background-attachment: fixed;
+            background-color: #ffffdd;                  
+            background-position: center center;
+        }
+        h1{
+          color:#cc0000;
+          font-family: Trattatello, fantasy;
+          font-size: 80px;
+        }
+        h2 {
+            font-family: Chalkduster, fantasy;
+            font-size: 30px;
+        }
+
+        h3 {
+            font-family: Luminari, fantasy;
+            color: #003366;
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 25px;
+            font-family: Snell Roundhand, cursive;
+            color: white;
+        }
+        </style>
+</head>
 </html>
