--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <table id="leaderboard">
     <h3>Leaderboard</h3>
         <tr>
-          <th>Username</th>
+          <th>Player</th>
           <th>High Score</th> 
         </tr>
         {% for i in score_list %}
