--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,7 @@
           color:#cc0000;
           font-family: Trattatello, fantasy;
           font-size: 80px;
+          text-align: center;
         }
         h2 {
             font-family: Chalkduster, fantasy;
@@ -149,7 +150,7 @@
 
         h3 {
             font-family: Luminari, fantasy;
-            color: #003366;
+            color: white;
             font-size: 25px;
         }
 
@@ -157,6 +158,9 @@
             font-size: 25px;
             font-family: Snell Roundhand, cursive;
             color: white;
+        }
+        div{
+          text-align: center;
         }
         </style>
 </head>
