--- a/templates/answer.html
+++ b/templates/answer.html
@@ -93,6 +93,12 @@
             font-size: 25px;
             font-family: Snell Roundhand, cursive;
             color: white;
+            text-align: center;
+        }
+        a{
+            font-size: 25px;
+            color: #ffffdd; 
+            font-family: Marker Felt, fantasy;
         }
             </style>
     </head>
