--- a/templates/answercorrect.html
+++ b/templates/answercorrect.html
@@ -86,6 +86,7 @@
             font-size: 25px;
             font-family: Snell Roundhand, cursive;
             color: white;
+            text-align: center;
         }
             </style>
     </head>
