--- a/templates/question.html
+++ b/templates/question.html
@@ -91,6 +91,7 @@
             font-size: 25px;
             font-family: Snell Roundhand, cursive;
             color: white;
+            text-align: center;
         }
         
         
