--- a/templates/answerincorrect.html
+++ b/templates/answerincorrect.html
@@ -84,6 +84,7 @@
             font-size: 25px;
             font-family: Snell Roundhand, cursive;
             color: white;
+            text-align: center;
         }
         </style>
 </head>
