--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         }
         body{ 
             height: 100%;
-            background: linear-gradient(to bottom right, white, black, red);
+            background: radial-gradient(red,black);
             background-attachment: fixed;
             background-color: #ffffdd;                  
             background-position: center center;
