--- a/templates/base.html
+++ b/templates/base.html
@@ -132,13 +132,13 @@
         }
         body{ 
             height: 100%;
-            background: radial-gradient(red,black);
+            background: radial-gradient(red, #404040, black);
             background-attachment: fixed;
             background-color: #ffffdd;                  
             background-position: center center;
         }
         h1{
-          color:black;
+          color:rgb(153, 10, 10);
           font-family: Trattatello, fantasy;
           font-size: 80px;
           text-align: center;
