--- a/templates/base.html
+++ b/templates/base.html
@@ -76,15 +76,15 @@
     <br> <br>
 
     <!--Twitter Sharing Button-->
-    <a class="twitter-share-button"
+    <div class="twitter-share-button"><a class="twitter-share-button"
     href="https://twitter.com/intent/tweet?url=http://gritty-beats.herokuapp.com/"
     data-size="large">
-    Tweet</a>
+    Tweet</a></div>
 
     <br> <br>
 
     <!--Pinterest Saving Button-->
-    <a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a>
+    <div class="pinterest-share-button"><a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a></div>
 
   </body>
 
@@ -169,6 +169,17 @@
             right: 0;
             
           }
+        div.twitter-share-button {
+          position: fixed;
+            top: 0;
+            right: 0;
+            
+        }
+        div.pinterest-share-button {
+          position: fixed;
+          top: 0;
+            right: 0;
+        }
           
         </style>
 </head>
