--- a/templates/base.html
+++ b/templates/base.html
@@ -167,18 +167,20 @@
             position: fixed;
             top: 0;
             right: 0;
-            
+            width: 350px
           }
         div.twitter-share-button {
           position: fixed;
             top: 0;
             right: 0;
+            width: 200px;
+
             
         }
         div.pinterest-share-button {
           position: fixed;
           top: 0;
-            right: 0;
+          right: 0;
         }
           
         </style>
