--- a/templates/base.html
+++ b/templates/base.html
@@ -166,21 +166,19 @@
         div.fb-share-button {
             position: fixed;
             top: 0;
-            right: 0;
-            width: 350px
+            right: 8.4%;
+            
           }
         div.twitter-share-button {
           position: fixed;
             top: 0;
-            right: 0;
-            width: 200px;
-
-            
+            right: 4%;
         }
         div.pinterest-share-button {
           position: fixed;
           top: 0;
           right: 0;
+          
         }
           
         </style>
