--- a/templates/answer.html
+++ b/templates/answer.html
@@ -14,6 +14,8 @@
     </p>
     <a href = "/question?chart_name={{genre_correct}}">Try again?</a>
     <br>
+    <br>
+    <br>
     <a href = "/">Change genre</a>
     <br>
     <form action="/clear" method="GET">
@@ -51,6 +53,7 @@
             padding:6px 24px;
             text-decoration:none;
             text-shadow:0px 1px 0px #ffffff;
+            margin-top: 30px;
         }
         input[type=submit]:hover {
             background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #6b606b));
