--- a/templates/question.html
+++ b/templates/question.html
@@ -49,6 +49,7 @@
             padding:6px 24px;
             text-decoration:none;
             text-shadow:0px 1px 0px #ffffff;
+            margin-top: 40px;
         }
         input[type=submit]:hover {
             background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #6b606b));
@@ -100,6 +101,9 @@
         }
         div.song-choices {
             color:white;
+            font-size: 30px;
+            font-family: Optima, sans-serif;
+            font-variant: small-caps;
         }
             </style>
     </head>
