--- a/templates/base.html
+++ b/templates/base.html
@@ -166,17 +166,17 @@
         div.fb-share-button {
             position: fixed;
             top: 0;
-            right: 8.4%;
+            right: 0;
             
           }
         div.twitter-share-button {
           position: fixed;
-            top: 0;
-            right: 4%;
+            top: 3.5%;
+            right: 0;
         }
         div.pinterest-share-button {
           position: fixed;
-          top: 0;
+          top: 7%;
           right: 0;
           
         }
