--- a/templates/question.html
+++ b/templates/question.html
@@ -98,6 +98,8 @@
         
         input[type="hidden"]{
             color: white;
+            margin-left:140px;
+            width: 20px;
         }
         div.song-choices {
             color:white;
