--- a/templates/base.html
+++ b/templates/base.html
@@ -167,7 +167,7 @@
             position: fixed;
             top: 0;
             right: 0;
-            
+            height: 20px;
           }
         div.twitter-share-button {
           position: fixed;
