--- a/templates/clear.html
+++ b/templates/clear.html
@@ -4,7 +4,7 @@
 
 <h2>Would you like to clear your score?</h2>
 <form action="/intermediate" method="GET">
-    <div>
+    <div class = "clear-choice">
     <input type="radio" name="choice" value="Yes" id="button1"> Yes<br>
     <input type="radio" name="choice" value="No" id = "button2"> No<br>
     <input type="submit" value = "Submit" name="Submit">
@@ -81,6 +81,12 @@
             font-family: Snell Roundhand, cursive;
             color: white;
             text-align: center;
+        }
+        div.clear-choice {
+            color:white;
+            font-size: 30px;
+            font-family: Optima, sans-serif;
+            font-variant: small-caps;
         }
         </style>
 </head>
