--- a/templates/askname.html
+++ b/templates/askname.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class = "Username">
     <form action="/recordscore" method="GET">
         Username:<br>
         <input type="text" name="username">
     </form>
+</div>
 
     <head>
         <style>
@@ -76,7 +78,11 @@
             font-family: Snell Roundhand, cursive;
             color: white;
         }
-        
+        div.Username{
+            font-family: Didot, serif;
+            color: #fffdd0;
+            font-size: 30px;
+        }
             </style>
     </head>
 
