--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@ Tweet</a></div>
 </table>
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             input[type=submit]{
             -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
