--- a/templates/question.html
+++ b/templates/question.html
@@ -10,7 +10,7 @@
 
             {% for song in song_answers %}
 
-                <div class="song-choices"><input type = "radio" name = "choice" value = "{{song}}"> {{song}} <br></div>
+                <div class="container-fluid"><div class="row"><div class="col-4"></div><div class="col-4"><div class="song-choices"><input type = "radio" name = "choice" value = "{{song}}"> {{song}} <br><div class="col-4"></div> </div></div></div></div>
             {% endfor %}
 
                 <input type="hidden" name="correct_choice" value = "{{correct_song}}">
@@ -23,7 +23,29 @@
     </form>
 
     <head>
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+          * {
+              box-sizing: border-box;
+            }
+            [class*="col-"] {
+              float: left;
+              padding: 15px;
+            }
+
+            .col-1 {width: 8.33%;}
+            .col-2 {width: 16.66%;}
+            .col-3 {width: 25%;}
+            .col-4 {width: 33.33%;}
+            .col-5 {width: 41.66%;}
+            .col-6 {width: 50%;}
+            .col-7 {width: 58.33%;}
+            .col-8 {width: 66.66%;}
+            .col-9 {width: 75%;}
+            .col-10 {width: 83.33%;}
+            .col-11 {width: 91.66%;}
+            .col-12 {width: 100%;}
+
            input[type=submit]{
             -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
             -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -97,6 +119,7 @@
             font-size: 30px;
             font-family: Optima, sans-serif;
             font-variant: small-caps;
+            text-align: left;
         }
             </style>
     </head>
