--- a/templates/index.html
+++ b/templates/index.html
@@ -40,11 +40,12 @@ Tweet</a></div>
     <input type="submit" value = "Clear Score" name="ClearScore">
 </form>
 
+<div class="container-fluid"><div class="row"><div class="col-4"></div><div class="col-4">
 <table id="leaderboard">
     <h3>Leaderboard (The Legends)</h3>
         <tr>
-          <th>Player</th>
-          <th>High Score</th>
+          <th>Player</th></div>
+          <th>High Score</th></div>
         </tr>
         {% for i in score_list %}
         <tr>
@@ -53,10 +54,33 @@ Tweet</a></div>
         </tr>
         {% endfor %}
 </table>
+</div><div class="col-4"></div></div></div>
+
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+          * {
+              box-sizing: border-box;
+            }
+            [class*="col-"] {
+              float: left;
+              padding: 15px;
+            }
+
+            .col-1 {width: 8.33%;}
+            .col-2 {width: 16.66%;}
+            .col-3 {width: 25%;}
+            .col-4 {width: 33.33%;}
+            .col-5 {width: 41.66%;}
+            .col-6 {width: 50%;}
+            .col-7 {width: 58.33%;}
+            .col-8 {width: 66.66%;}
+            .col-9 {width: 75%;}
+            .col-10 {width: 83.33%;}
+            .col-11 {width: 91.66%;}
+            .col-12 {width: 100%;}
+
             input[type=submit]{
             -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
             -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -133,6 +157,7 @@ Tweet</a></div>
         th{
             font-family: Didot, serif;
             color: #fffdd0;
+            text-align: left;
         }
         table {
             width: 100%;
