--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,11 @@
 <div class="fb-share-button" data-href="http://gritty-beats.herokuapp.com/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgritty-beats.herokuapp.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
 
-
 <!--Twitter Sharing Button-->
 <div class="twitter-share-button"><a class="twitter-share-button"
 href="https://twitter.com/intent/tweet?url=http://gritty-beats.herokuapp.com/"
 data-size="large">
 Tweet</a></div>
-
 
 
 <!--Pinterest Saving Button-->
@@ -40,7 +38,7 @@ Tweet</a></div>
     <input type="submit" value = "Clear Score" name="ClearScore">
 </form>
 
-<div class="container-fluid"><div class="row"><div class="col-4"></div><div class="col-4">
+<div class="container-fluid"><div class="row"><div class="col-xs-4"></div><div class="col-xs-4">
 <table id="leaderboard">
     <h3>Leaderboard (The Legends)</h3>
         <tr>
@@ -54,7 +52,7 @@ Tweet</a></div>
         </tr>
         {% endfor %}
 </table>
-</div><div class="col-4"></div></div></div>
+</div><div class="col-xs-4"></div></div></div>
 
 
 <head>
