--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,8 @@
     src="//assets.pinterest.com/js/pinit.js"
     ></script>
     <div id="header">
-      <div class="container"><div class="row"><div class="col-1"></div><div class="col-10">
-      <h1>The Gritty Beats Music Game</h1> <div class="col-1"></div> </div></div></div>
+      <div class="container"><div class="row"><div class="col--md-1"></div><div class="col-md-10">
+      <h1>The Gritty Beats Music Game</h1> <div class="col-md-1"></div> </div></div></div>
       <p>Choose a genre, and try to guess the correct song!<p>
     </div>
     <div id="content">{% block content %}{% endblock %}</div>
