--- a/templates/index.html
+++ b/templates/index.html
@@ -2,35 +2,28 @@
 
 {% block content %}
 
-<!--Facebook Sharing Button-->
-<div class="fb-share-button" data-href="http://gritty-beats.herokuapp.com/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgritty-beats.herokuapp.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
-
-<!--Twitter Sharing Button-->
-<div class="twitter-share-button"><a class="twitter-share-button"
-href="https://twitter.com/intent/tweet?url=http://gritty-beats.herokuapp.com/"
-data-size="large">
-Tweet</a></div>
-
-
-<!--Pinterest Saving Button-->
-<div class="pinterest-share-button"><a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a></div>
 
 
 <div class="snowflakes">
     <h2>Choose a genre:</h2>
 
+<div class="container"><div class="row">
     <form action="/question" method="GET">
 
+        <div class="col-md-2"></div><div class="col-xs-4"><
         <select name="chart_name"> {{song_url}}
     {% for genre in genres %}
         <option value = "{{genre}}">{{genre}}</option>
     {% endfor %}
         </select>
+        </div><div class="col-md-1"></div><div class="col-xs-2">
 
         <input type="hidden" name="chart" value="{{genre}}">
     <input type="submit">
+    </div><div class="col-md-3"></div></div></div>
     </form>
+
 
 <br>
 
@@ -38,7 +31,7 @@ Tweet</a></div>
     <input type="submit" value = "Clear Score" name="ClearScore">
 </form>
 
-<div class="container-fluid"><div class="row"><div class="col-xs-4"></div><div class="col-xs-4">
+<div class="container-fluid"><div class="row"><div class="col-sm-5"></div><div class="col-sm-3">
 <table id="leaderboard">
     <h3>Leaderboard (The Legends)</h3>
         <tr>
@@ -52,8 +45,23 @@ Tweet</a></div>
         </tr>
         {% endfor %}
 </table>
-</div><div class="col-xs-4"></div></div></div>
+</div><div class="col-sm-4"></div></div></div>
 
+<!--Facebook Sharing Button-->
+<p
+<div class="fb-share-button" data-href="http://gritty-beats.herokuapp.com/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgritty-beats.herokuapp.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+</p>
+<!--Twitter Sharing Button-->
+<p
+<div class="twitter-share-button"><a class="twitter-share-button"
+href="https://twitter.com/intent/tweet?url=http://gritty-beats.herokuapp.com/"
+data-size="large">
+Tweet</a></div>
+</p>
+<!--Pinterest Saving Button-->
+<p
+<div class="pinterest-share-button"> <a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media = "http://gritty-beats.herokuapp.com/" data-pin-tall="True"></a></div>
+</p>
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -143,7 +151,8 @@ Tweet</a></div>
             font-family: Luminari, fantasy;
             color: white;
             font-size: 25px;
-            text-align: center;
+            text-align: left;
+            margin-left: 10%;
         }
 
         p {
@@ -165,6 +174,12 @@ Tweet</a></div>
             width: auto;
             margin-right: 0px;
             margin-left: auto;
+        }
+        @media only screen and (max-width: 768px) {
+          /* For mobile phones: */
+          [class*="col-"] {
+            width: 100%;
+          }
         }
 
         </style>
