--- a/templates/base.html
+++ b/templates/base.html
@@ -179,6 +179,12 @@
           top: 7%;
           right: 0;
         }
+        @media only screen and (max-width: 768px) {
+          /* For mobile phones: */
+          [class*="col-"] {
+            width: 100%;
+          }
+        }
         </style>
 </head>
 </html>
