--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container"><div class="row">
     <form action="/question" method="GET">
 
-        <div class="col-md-2"></div><div class="col-xs-4"><
+        <div class="col-md-2"></div><div class="col-xs-4">
         <select name="chart_name"> {{song_url}}
     {% for genre in genres %}
         <option value = "{{genre}}">{{genre}}</option>
