--- a/templates/question.html
+++ b/templates/question.html
@@ -33,18 +33,26 @@
               padding: 15px;
             }
 
-            .col-1 {width: 8.33%;}
-            .col-2 {width: 16.66%;}
-            .col-3 {width: 25%;}
-            .col-4 {width: 33.33%;}
-            .col-5 {width: 41.66%;}
-            .col-6 {width: 50%;}
-            .col-7 {width: 58.33%;}
-            .col-8 {width: 66.66%;}
-            .col-9 {width: 75%;}
-            .col-10 {width: 83.33%;}
-            .col-11 {width: 91.66%;}
-            .col-12 {width: 100%;}
+            /* For mobile phones: */
+            [class*="col-"] {
+              width: 100%;
+            }
+
+            @media only screen and (min-width: 768px) {
+              /* For desktop: */
+              .col-md-1 {width: 8.33%;}
+              .col-md-2 {width: 16.66%;}
+              .col-md-3 {width: 25%;}
+              .col-md-4 {width: 33.33%;}
+              .col-md-5 {width: 41.66%;}
+              .col-md-6 {width: 50%;}
+              .col-md-7 {width: 58.33%;}
+              .col-md-8 {width: 66.66%;}
+              .col-md-9 {width: 75%;}
+              .col-md-10 {width: 83.33%;}
+              .col-md-11 {width: 91.66%;}
+              .col-md-12 {width: 100%;}
+            }
 
            input[type=submit]{
             -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -121,6 +129,8 @@
             font-variant: small-caps;
             text-align: left;
         }
+
+
             </style>
     </head>
 {% endblock %}
