--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,7 @@
           font-family: Trattatello, fantasy;
           font-size: 80px;
           text-align: center;
+
         }
         h2 {
             font-family: Chalkduster, fantasy;
@@ -183,6 +184,18 @@
           /* For mobile phones: */
           [class*="col-"] {
             width: 100%;
+          }
+          h1{
+            color:rgb(153, 10, 10);
+            font-family: Trattatello, fantasy;
+            font-size: 9vw;
+            text-align: center;
+          }
+          p {
+              font-size: 3vw;
+              font-family: Snell Roundhand, cursive;
+              color: white;
+              text-align: center;
           }
         }
         </style>
