--- a/templates/answerincorrect.html
+++ b/templates/answerincorrect.html
@@ -72,6 +72,7 @@
         h2 {
             font-family: Chalkduster, fantasy;
             font-size: 30px;
+            color:white;
         }
         h3 {
             font-family: Luminari, fantasy;
