--- a/templates/askname.html
+++ b/templates/askname.html
@@ -4,7 +4,9 @@
 <div class = "Username">
     <form action="/recordscore" method="GET">
         Username:<br>
+        <div class = "input">
         <input type="text" name="username">
+    </div>
     </form>
 </div>
 
@@ -80,6 +82,10 @@
             font-family: Didot, serif;
             color: #fffdd0;
             font-size: 30px;
+        }
+        div.input{
+            font-family: Didot, serif;
+            color:black;
         }
             </style>
     </head>
