--- a/templates/answercorrect.html
+++ b/templates/answercorrect.html
@@ -74,6 +74,7 @@
         h2 {
             font-family: Chalkduster, fantasy;
             font-size: 30px;
+            color:white;
         }
         h3 {
             font-family: Luminari, fantasy;
