--- a/templates/clear.html
+++ b/templates/clear.html
@@ -68,6 +68,7 @@
         h2 {
             font-family: Chalkduster, fantasy;
             font-size: 30px;
+            color:white;
         }
         h3 {
             font-family: Luminari, fantasy;
