--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
 <div class="container-fluid"><div class="row"><div class="col-sm-5"></div><div class="col-sm-3">
 <table id="leaderboard">
-    <h3>Leaderboard (The Legends)</h3>
+    <h3>Leaderboard</h3>
         <tr>
           <th>Player</th></div>
           <th>High Score</th></div>
