--- a/templates/base.html
+++ b/templates/base.html
@@ -149,6 +149,7 @@
         h2 {
             font-family: Chalkduster, fantasy;
             font-size: 30px;
+            color:white;
         }
         h3 {
             font-family: Luminari, fantasy;
