--- a/templates/question.html
+++ b/templates/question.html
@@ -33,12 +33,8 @@
               padding: 15px;
             }
 
-            /* For mobile phones: */
-            [class*="col-"] {
-              width: 100%;
-            }
 
-            @media only screen and (min-width: 768px) {
+
               /* For desktop: */
               .col-md-1 {width: 8.33%;}
               .col-md-2 {width: 16.66%;}
@@ -52,7 +48,7 @@
               .col-md-10 {width: 83.33%;}
               .col-md-11 {width: 91.66%;}
               .col-md-12 {width: 100%;}
-            }
+
 
            input[type=submit]{
             -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -128,6 +124,19 @@
             font-family: Optima, sans-serif;
             font-variant: small-caps;
             text-align: left;
+        }
+        @media only screen and (max-width: 768px) {
+        /* For mobile phones: */
+        [class*="col-"] {
+          width: 100%;
+        }
+        div.song-choices {
+            color:white;
+            font-size: 3vw;
+            font-family: Optima, sans-serif;
+            font-variant: small-caps;
+            text-align: left;
+        }
         }
 
 
