--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <input type="submit" value = "Clear Score" name="ClearScore">
 </form>
 
-<div class="container-fluid"><div class="row"><div class="col-sm-5"></div><div class="col-sm-3">
+<div class="container-fluid"><div class="row"><div class="col-5"></div><div class="col-3">
 <table id="leaderboard">
     <h3>Leaderboard</h3>
         <tr>
@@ -43,7 +43,7 @@
         </tr>
         {% endfor %}
 </table>
-</div><div class="col-sm-4"></div></div></div>
+</div><div class="col-4"></div></div></div>
 
 <!--Facebook Sharing Button-->
 <p
@@ -178,7 +178,19 @@ Tweet</a></div>
           [class*="col-"] {
             width: 100%;
           }
+          h3 {
+              font-family: Luminari, fantasy;
+              color: white;
+              font-size: 25px;
+              text-align: center;
+              margin-right: 10%;
+          }
+          table {
+            width: 100%;
+            margin-left: 20%;
+          }
         }
+
 
         </style>
 </head>
