--- a/templates/answer.html
+++ b/templates/answer.html
@@ -12,7 +12,7 @@
     <p> The answer is
         <b>{{our_song}}</b>
     </p>
-    <a href = "/question?chart_name={{genre_correct}}">Try again?</a>
+    <a href = "/question?chart_name={{genre_correct}}">Continue?</a>
     
     <br>
     <a href = "/">Change genre</a>
